# estesql

./: CMakeLists.txt  README.md
src/: main.cpp
src/app/: app.cpp  app.h
src/app/constants/: assets_paths.h  file_extensions.h  inline_parameters.h  string_delimiters.h  string_key_words.h  syntax_query.h  test_strings.h
src/app/enumerations/: field_type_t.h  query_type.h
src/app/exceptions/: already_existing_db_exception.h  already_existing_table_exception.h  column_non_existing_exception.h  create_drop_table_or_db_exception.h  custom_exception.h  file_does_not_exist_exception.h  file_is_not_open_exception.h  inability_to_check_if_file_exists_exception.h  inability_to_create_directory_exception.h  inability_to_create_file_exception.h  inability_to_open_file_exception.h  inability_to_read_undefined_index_file_position_exception.h  inability_to_retrieve_file_length_exception.h  inability_to_write_after_undefined_index_file_position_exception.h  index_file_is_not_valid_exception.h  insert_duplicate_columns_exception.h  insert_number_columns_values_exception.h  invalid_uint8_t_vector_size_exception.h  missing_or_multiple_primary_key_exception.h  non_existing_db_exception.h  non_existing_table_exception.h  query_size_exception.h  select_number_columns_exception.h  sql_invalid_syntax_exception.h  unknown_query_exception.h  update_primary_key_exception.h  wrong_type_exception.h
src/app/helpers/: build_where_clause.cpp  build_where_clause.h  db_table_utilities.cpp  db_table_utilities.h  db_utilities.cpp  file_set_up.cpp  file_set_up.h  index_entry_utilities.h  string_utilities.cpp  string_utilities.h
src/app/managers/: content_file.cpp  content_file.h  db_info.cpp  db_info.h  db_utilities.cpp  db_utilities.h  definition_file.cpp  definition_file.h  index_file.cpp  index_file.h  key_file.cpp  key_file.h  table_file.cpp  table_file.h
src/app/models/: column_definition.cpp  column_definition.h  table_definition.cpp  table_definition.h  where_clause.cpp  where_clause.h
src/app/queries/: create_database_query.cpp  create_database_query.h  create_table_query.cpp  create_table_query.h  database_related_query.cpp  database_related_query.h  (+22 more)
src/factories/: ShapeFactory.cpp  ShapeFactory.h
src/interfaces/: IShape.cpp  IShape.h
src/models/: CircleModel.cpp  CircleModel.h  RectangleModel.cpp  RectangleModel.h  TriangleModel.cpp  TriangleModel.h
src/services/: ShapeService.cpp  ShapeService.h
(+15 files in other folders)
